# imdb_mongo

./: .env.example  .gitignore  imdb_api_request.http  pyproject.toml
docker/: Dockerfile
src/: __main__.py  collections.py  const.py  settings.py
src/base/fastapi_service/: service.py
src/base/mongo_service/: config.py  service.py
src/imdb_client_service/: client.py  config.py
src/rest_api/api/v1/: response_schema.py  router.py  titles.py
