[tool.poetry]
name = "imdb-mongo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "imdb_mongo"}]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.poetry.dependencies]
python = "^3.11"
aiomisc = "^17.2.2"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
prometheus-client = "^0.16.0"
opentelemetry-instrumentation-aiohttp-client = "^0.38b0"
opentelemetry-instrumentation-fastapi = "^0.38b0"
opentelemetry-exporter-jaeger = "^1.17.0"
opentelemetry-instrumentation-logging = "^0.38b0"
odmantic = "^0.9.2"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
